--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   supabase_flutter: ^2.8.3
   flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.4
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
