--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.4
   fluttertoast: ^8.2.12
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
